--- a/Bluetooth4_3/bin/AndroidManifest.xml
+++ b/Bluetooth4_3/bin/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+     <uses-permission android:name="android.permission.WAKE_LOCK" />
    
     <application
         android:allowBackup="true"
