--- a/Bluetooth4_3/.classpath
+++ b/Bluetooth4_3/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/achartengine-1.1.0"/>
+	<classpathentry kind="lib" path="D:/Java_Work/Bluetooth4_3/Bluetooth4_3/libs/achartengine-1.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/achartengine-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
