--- a/Bluetooth4_3/AndroidManifest.xml
+++ b/Bluetooth4_3/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
+        
         <activity
             android:name="com.example.bluetooth.le.DeviceScanActivity"
             android:label="@string/app_name" >
@@ -29,7 +30,7 @@
         
          <activity android:name=".DeviceControlActivity"/>
         <service android:name=".BluetoothLeService" android:enabled="true"/>
-        
+        <activity android:name="org.achartengine.GraphicalActivity" />
     </application>
 
 </manifest>
